re PR c++/46058 (gcc crashes with lvalue error on the following Code)

PR c++/46058
	* tree.c (lvalue_kind) [SCOPE_REF]: Handle non-dependent case.

From-SVN: r167438